src/.antlr/niceParser.java
// Generated from /mnt/d/Programming/GithubRepos/nice-syntax/src/nice.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class niceParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, WS=3, AT=4, EVERY=5, FROM=6, TO=7, COMMA=8, LSQBRT=9, 
		RSQBRT=10, SEMICOLON=11, IDENTIFIER=12, INT=13, FLOAT=14, STRING=15;
	public static final int
		RULE_code = 0, RULE_statement = 1, RULE_assignment = 2, RULE_expr = 3, 
		RULE_listSlice = 4, RULE_lSlice = 5, RULE_lAt = 6, RULE_lFrom = 7, RULE_lFromTo = 8, 
		RULE_lIdxes = 9, RULE_value = 10, RULE_literalList = 11, RULE_lElements = 12, 
		RULE_literal = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"code", "statement", "assignment", "expr", "listSlice", "lSlice", "lAt", 
			"lFrom", "lFromTo", "lIdxes", "value", "literalList", "lElements", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "'='", null, "'at'", "'every'", "'from'", "'to'", "','", 
			"'['", "']'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "WS", "AT", "EVERY", "FROM", "TO", "COMMA", "LSQBRT", 
			"RSQBRT", "SEMICOLON", "IDENTIFIER", "INT", "FLOAT", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "nice.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public niceParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CodeContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_code);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(niceParser.SEMICOLON, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(30);
				assignment();
				}
				break;
			case LSQBRT:
			case IDENTIFIER:
				{
				setState(31);
				expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(34);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(T__0);
			setState(37);
			value();
			setState(38);
			match(T__1);
			setState(39);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ListSliceContext listSlice() {
			return getRuleContext(ListSliceContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			listSlice();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListSliceContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public List<LSliceContext> lSlice() {
			return getRuleContexts(LSliceContext.class);
		}
		public LSliceContext lSlice(int i) {
			return getRuleContext(LSliceContext.class,i);
		}
		public ListSliceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listSlice; }
	}

	public final ListSliceContext listSlice() throws RecognitionException {
		ListSliceContext _localctx = new ListSliceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_listSlice);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			value();
			setState(45); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(44);
				lSlice();
				}
				}
				setState(47); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << FROM) | (1L << TO))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LSliceContext extends ParserRuleContext {
		public LAtContext lAt() {
			return getRuleContext(LAtContext.class,0);
		}
		public LFromContext lFrom() {
			return getRuleContext(LFromContext.class,0);
		}
		public LFromToContext lFromTo() {
			return getRuleContext(LFromToContext.class,0);
		}
		public LSliceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lSlice; }
	}

	public final LSliceContext lSlice() throws RecognitionException {
		LSliceContext _localctx = new LSliceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lSlice);
		try {
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				lAt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				lFrom();
				setState(51);
				lFromTo();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				lFrom();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(54);
				lFromTo();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LAtContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(niceParser.AT, 0); }
		public LIdxesContext lIdxes() {
			return getRuleContext(LIdxesContext.class,0);
		}
		public TerminalNode EVERY() { return getToken(niceParser.EVERY, 0); }
		public TerminalNode INT() { return getToken(niceParser.INT, 0); }
		public LAtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lAt; }
	}

	public final LAtContext lAt() throws RecognitionException {
		LAtContext _localctx = new LAtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_lAt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(AT);
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EVERY:
				{
				{
				setState(58);
				match(EVERY);
				setState(59);
				match(INT);
				}
				}
				break;
			case INT:
				{
				setState(60);
				lIdxes();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LFromContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(niceParser.FROM, 0); }
		public TerminalNode INT() { return getToken(niceParser.INT, 0); }
		public LFromContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lFrom; }
	}

	public final LFromContext lFrom() throws RecognitionException {
		LFromContext _localctx = new LFromContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lFrom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(FROM);
			setState(64);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LFromToContext extends ParserRuleContext {
		public TerminalNode TO() { return getToken(niceParser.TO, 0); }
		public TerminalNode INT() { return getToken(niceParser.INT, 0); }
		public LFromToContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lFromTo; }
	}

	public final LFromToContext lFromTo() throws RecognitionException {
		LFromToContext _localctx = new LFromToContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_lFromTo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(TO);
			setState(67);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LIdxesContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(niceParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(niceParser.INT, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(niceParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(niceParser.COMMA, i);
		}
		public LIdxesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lIdxes; }
	}

	public final LIdxesContext lIdxes() throws RecognitionException {
		LIdxesContext _localctx = new LIdxesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lIdxes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(INT);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(70);
				match(COMMA);
				setState(71);
				match(INT);
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(niceParser.IDENTIFIER, 0); }
		public LiteralListContext literalList() {
			return getRuleContext(LiteralListContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_value);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				match(IDENTIFIER);
				}
				break;
			case LSQBRT:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				literalList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralListContext extends ParserRuleContext {
		public TerminalNode LSQBRT() { return getToken(niceParser.LSQBRT, 0); }
		public TerminalNode RSQBRT() { return getToken(niceParser.RSQBRT, 0); }
		public LElementsContext lElements() {
			return getRuleContext(LElementsContext.class,0);
		}
		public LiteralListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literalList; }
	}

	public final LiteralListContext literalList() throws RecognitionException {
		LiteralListContext _localctx = new LiteralListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_literalList);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				match(LSQBRT);
				setState(82);
				match(RSQBRT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				match(LSQBRT);
				setState(84);
				lElements();
				setState(85);
				match(RSQBRT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LElementsContext extends ParserRuleContext {
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(niceParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(niceParser.COMMA, i);
		}
		public LElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lElements; }
	}

	public final LElementsContext lElements() throws RecognitionException {
		LElementsContext _localctx = new LElementsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_lElements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			literal();
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(90);
				match(COMMA);
				setState(91);
				literal();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(niceParser.INT, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_literal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}